cert-manager/acme/ho-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/common-name: "test.acme.com"
    cert-manager.io/cluster-issuer: "standard-issuer"
  name: kuard
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: test.acme.com
    http:
      paths:
      - backend:
          service:
            name: kuard
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test.acme.com
    secretName: kuard-cert-ho-2
